test/cli/test/mock-apicall-responses/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-pass
  namespace: test-ns
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-fail
  namespace: test-ns
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
