test/cli/test/mock-apicall-responses/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mock-apicall-responses
policies:
- policy.yaml
resources:
- resources.yaml
variables: values.yaml
mockAPICallResponses:
  - urlPath: "https://external-service.example.com/api/check"
    response:
      statusCode: 200
      body:
        allowed: true
results:
- kind: Pod
  policy: check-external-service
  resources:
  - test-ns/test-pod-pass
  - test-ns/test-pod-fail
  result: pass
  rule: check-allowed
